<resources>
    <string name="app_name">Clever Safe</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="forgot">Forgot your password ?</string>
    <string name="haveAccount">Have account ?</string>
    <string name="showPass">Reset your password by email</string>
    <string name="reset">Reset</string>
    <string name="sendCode">Send code</string>
    <string name="setEmail">Enter your email</string>
    <string name="title">Enter your string password here or click skip, to skip this step</string>
    <string name="title_activity_sorage">MainActivity</string>
    <string name="addImage">add Image</string>
    <string name="title_home">Home</string>
    <string name="browser">Browser</string>
    <string name="settings">Settings</string>
    <string name="title_dashboard">Storage</string>
    <string name="title_account">Account</string>
    <string name="accountInfo">users information</string>
    <string name="changePin">Change pincode</string>
    <string name="changePass">Change password</string>
    <string name="changeEmail">Change email</string>
    <string name="deleteAccount">delete account</string>
</resources>