<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showPass"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setEmail"
            android:layout_margin="15dp"
            android:singleLine="true"
            android:padding="15dp" />

        <Button
            android:id="@+id/resetPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendCode"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:onClick="sendCode"/>

        <Button
            android:id="@+id/goBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="go back"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:onClick="goBack"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>