<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:layout_marginEnd="30sp"
                android:textColor="@color/dark_200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emailEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5sp"
                android:text="testmail@example.com"
                android:textColor="@color/darkSkyBlue"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Premium:"
                android:layout_marginEnd="16sp"
                android:textColor="@color/dark_200"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5sp"
                android:text="none"
                android:textColor="@color/lightRead"
                android:textSize="18sp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start">

            <Button
                android:id="@+id/changePin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePin"/>

            <Button
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePass"/>

            <Button
                android:id="@+id/changeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeEmail"/>

            <Button
                android:id="@+id/deleteAccount"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteAccount"/>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>